[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui_manager.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://scripts/Camera.cs" type="Script" id=3]
[ext_resource path="res://scripts/paddle_manager.gd" type="Script" id=4]
[ext_resource path="res://scripts/ball_manager.gd" type="Script" id=5]
[ext_resource path="res://scripts/map_manager.gd" type="Script" id=6]
[ext_resource path="res://scripts/HUDManager.cs" type="Script" id=7]
[ext_resource path="res://assets/ui.tres" type="Theme" id=8]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
editor_draw_screen = false
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MapManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PaddleManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BallManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="HUDManager" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIManager" parent="CanvasLayer" instance=ExtResource( 1 )]
